# Caspian

./: .gitignore  CMakeLists.txt  README.md  makefile
bindings/: backend.cpp  bindings.cpp  fast_infer.cpp  network.cpp  processor.cpp
iceprog/: .gitignore  Makefile  mpsse.c  program.sh
include/: backend.hpp  constants.hpp  hardware.hpp  network.hpp  network_conversion.hpp  processor.hpp  simulator.hpp  spike_encoder.hpp  ucaspian.hpp
include/path/: path.hpp
pybindings/: backend.cpp  bindings.cpp  processor.cpp
scripts/: a2a_dly_perf.sh  a2a_perf.sh  a2a_test.sh  pass_perf.sh  pass_test.sh  rnn.sh
src/: backend.cpp  ftdi_usb.cpp  hardware.cpp  micro_verilator.cpp  network.cpp  network_conversion.cpp  packets.cpp  processor.cpp  simulator.cpp  spike_encoder.cpp  ucaspian.cpp  verilator_caspian.cpp
src_static/: static_proc.cpp
test/: basic_sim.cpp  multi_sim.cpp  network_ops.cpp  test_main.cpp
utils/: all_to_all_bench.cpp  benchmark.cpp  echo.cpp  net_bench.cpp  network_convert.cpp  pass_bench.cpp  prune.cpp  rand_bench.cpp  rand_bench.py
